<?xml version="1.0" encoding="utf-8"?>
<!-- S13 Settings. Rows in fixed order; each is a focus stop. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/content_pad"
        android:paddingEnd="@dimen/content_pad">

        <TextView
            android:id="@+id/settings_notifications"
            style="@style/Widget.MatChat.Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_notifications"
            android:textSize="?attr/textSizeLabel"
            android:textColor="?attr/colorTextOnFocus" />

        <TextView
            android:id="@+id/settings_text_size"
            style="@style/Widget.MatChat.Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_text_size"
            android:textSize="?attr/textSizeLabel"
            android:textColor="?attr/colorTextOnFocus" />

        <TextView
            android:id="@+id/settings_theme"
            style="@style/Widget.MatChat.Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme"
            android:textSize="?attr/textSizeLabel"
            android:textColor="?attr/colorTextOnFocus" />

        <TextView
            android:id="@+id/settings_advanced"
            style="@style/Widget.MatChat.Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_advanced"
            android:textSize="?attr/textSizeLabel"
            android:textColor="?attr/colorTextOnFocus" />

        <TextView
            android:id="@+id/settings_encryption"
            style="@style/Widget.MatChat.Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_encryption"
            android:textSize="?attr/textSizeLabel"
            android:textColor="?attr/colorTextOnFocus" />

        <TextView
            android:id="@+id/settings_session"
            style="@style/Widget.MatChat.Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_session"
            android:textSize="?attr/textSizeLabel"
            android:textColor="?attr/colorTextOnFocus" />

        <TextView
            android:id="@+id/settings_policy"
            style="@style/Widget.MatChat.Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="?attr/textSizeLabel"
            android:textColor="?attr/colorTextOnFocus" />

        <TextView
            android:id="@+id/settings_update"
            style="@style/Widget.MatChat.Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_update"
            android:textSize="?attr/textSizeLabel"
            android:textColor="?attr/colorTextOnFocus" />

        <TextView
            android:id="@+id/settings_help"
            style="@style/Widget.MatChat.Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_help"
            android:textSize="?attr/textSizeLabel"
            android:textColor="?attr/colorTextOnFocus" />

        <TextView
            android:id="@+id/settings_sign_out"
            style="@style/Widget.MatChat.Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_sign_out"
            android:textSize="?attr/textSizeLabel"
            android:textColor="?attr/colorTextOnFocus" />
    </LinearLayout>
</ScrollView>
